--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "assets_shared"]
 	path = assets_shared
 	url = https://github.com/cycraig/assets_shared.git
+[submodule "rust-boids-wasm"]
+	path = rust-boids-wasm
+	url = https://github.com/cycraig/rust-boids-wasm
